tests/baselines/reference/nullKeyword.errors.txt
tests/cases/compiler/nullKeyword.ts(1,1): error TS2531: 'null' is possibly 'null'.


==== tests/cases/compiler/nullKeyword.ts (1 errors) ====
    null.foo;
    ~~~~
!!! error TS2531: 'null' is possibly 'null'.